# sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  api.md  pylintrc  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
.speakeasy/: gen.yaml
docs/errors/: error.md
docs/models/: button.md  capabilities.md  channel.md  contact.md  contactupdaterequest.md  deletesenderrequest.md  deletetemplaterequest.md  getcontactbyphonerequest.md  getcontactrequest.md  getmessagerequest.md  getsenderrequest.md  gettemplaterequest.md  listcontactsrequest.md  listcontactsresponse.md  listmessagesrequest.md  listmessagesresponse.md  listsendersresponse.md  listtemplatesresponse.md  message.md  messagecontent.md  messagecontentcontact.md  messagerequest.md  messageresponse.md  messagestatus.md  messagetype.md  phoneintrospectionrequest.md  phoneintrospectionresponse.md  reactionrequest.md  row.md  section.md  sender.md  sendercreaterequest.md  senderupdaterequest.md  sendmessagerequest.md  sendreactionrequest.md  status.md  template.md  templatecreaterequest.md  updatecontactrequest.md  updatesenderrequest.md  (+1 more)
scripts/: lint
scripts/utils/: upload-artifact.sh
src/zavu_sdk/: _version.py  basesdk.py  sdk.py  sdkconfiguration.py
src/zavudev/: __init__.py  _base_client.py  _client.py  _exceptions.py  (+6 more)
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
(+362 files in other folders)
