
[project]
name = "zavu-sdk"
version = "0.0.8"
description = "Python SDK for Zavu multi-channel messaging API."
authors = [{ name = "Crubing LLC" },]
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]
license = { text = "Apache-2.0" }

[tool.poetry]
packages = [
    { include = "zavu_sdk", from = "src" }
]
include = ["py.typed", "src/zavu_sdk/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/zavu_sdk/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pyright = "==1.1.398"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


